--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "This is a new version of the old investment project on my Github. This version will use JavaScript, and will be deployed as website rather than a console application.",
   "main": "index.js",
+ 
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
     "jest": "^29.2.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "yahoo-finance2": "^2.3.6"
   }
 }
