--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "This is a new version of the old investment project on my Github. This version will use JavaScript, and will be deployed as website rather than a console application.",
   "main": "index.js",
- 
   "scripts": {
     "test": "jest",
     "dev": "nodemon ./server.js"
@@ -24,6 +23,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "jquery": "^3.6.1",
     "yahoo-finance2": "^2.3.6"
   }
 }
