--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jquery": "^3.6.1",
+    "three": "^0.146.0",
     "yahoo-finance2": "^2.3.6"
   }
 }
