--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.2.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "three": "^0.146.0",
